FIXED IMAGESLIDER OVERFLOW
- Revised Banner
- Fixed Silvopasture Scrollto
- Added jumbotron to home

--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,9 @@ td, th {
   top: 10px;
   left: 0;
 }
+.absImg {
+  object-fit: contain !important;
+}
+.pb75 {
+  padding-bottom: 60%;
+}
